; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ctxfi/extr_ctatc.c_atc_pcm_release_resources.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ctxfi/extr_ctatc.c_atc_pcm_release_resources.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ct_atc = type { %struct.sum_mgr** }
%struct.sum_mgr = type { i32 (%struct.sum_mgr*, %struct.srcimp*)*, i32 (%struct.sum_mgr*, i32*)*, i32 (%struct.sum_mgr*, %struct.srcimp.0*)*, i32 (%struct.sum_mgr*, %struct.srcimp.1*)* }
%struct.srcimp = type opaque
%struct.srcimp.0 = type opaque
%struct.srcimp.1 = type opaque
%struct.ct_atc_pcm = type { i32, i32, i32, i32*, %struct.srcimp.2*, i32*, %struct.srcimp.2**, %struct.srcimp.2**, %struct.srcimp.2** }
%struct.srcimp.2 = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.srcimp.2*)* }
%struct.src_mgr = type { i32 (%struct.sum_mgr*, %struct.srcimp.2*)*, i32 (%struct.sum_mgr*, i32*)*, i32 (%struct.sum_mgr*, %struct.srcimp.2*)*, i32 (%struct.sum_mgr*, %struct.srcimp.2*)* }
%struct.srcimp_mgr = type { i32 (%struct.sum_mgr*, %struct.srcimp.3*)*, i32 (%struct.sum_mgr*, i32*)*, i32 (%struct.sum_mgr*, %struct.srcimp.4*)*, i32 (%struct.sum_mgr*, %struct.srcimp.5*)* }
%struct.srcimp.3 = type opaque
%struct.srcimp.4 = type opaque
%struct.srcimp.5 = type opaque
%struct.amixer_mgr = type { i32 (%struct.sum_mgr*, %struct.srcimp.2*)*, i32 (%struct.sum_mgr*, i32*)*, i32 (%struct.sum_mgr*, %struct.srcimp.2*)*, i32 (%struct.sum_mgr*, %struct.srcimp.2*)* }

@SRC = common dso_local global i64 0, align 8
@SRCIMP = common dso_local global i64 0, align 8
@AMIXER = common dso_local global i64 0, align 8
@SUM = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ct_atc*, %struct.ct_atc_pcm*)* @atc_pcm_release_resources to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @atc_pcm_release_resources(%struct.ct_atc* %0, %struct.ct_atc_pcm* %1) #0 {
  %3 = alloca %struct.ct_atc*, align 8
  %4 = alloca %struct.ct_atc_pcm*, align 8
  %5 = alloca %struct.src_mgr*, align 8
  %6 = alloca %struct.srcimp_mgr*, align 8
  %7 = alloca %struct.amixer_mgr*, align 8
  %8 = alloca %struct.sum_mgr*, align 8
  %9 = alloca %struct.srcimp.2*, align 8
  %10 = alloca i32, align 4
  store %struct.ct_atc* %0, %struct.ct_atc** %3, align 8
  store %struct.ct_atc_pcm* %1, %struct.ct_atc_pcm** %4, align 8
  %11 = load %struct.ct_atc*, %struct.ct_atc** %3, align 8
  %12 = getelementptr inbounds %struct.ct_atc, %struct.ct_atc* %11, i32 0, i32 0
  %13 = load %struct.sum_mgr**, %struct.sum_mgr*** %12, align 8
  %14 = load i64, i64* @SRC, align 8
  %15 = getelementptr inbounds %struct.sum_mgr*, %struct.sum_mgr** %13, i64 %14
  %16 = load %struct.sum_mgr*, %struct.sum_mgr** %15, align 8
  %17 = bitcast %struct.sum_mgr* %16 to %struct.src_mgr*
  store %struct.src_mgr* %17, %struct.src_mgr** %5, align 8
  %18 = load %struct.ct_atc*, %struct.ct_atc** %3, align 8
  %19 = getelementptr inbounds %struct.ct_atc, %struct.ct_atc* %18, i32 0, i32 0
  %20 = load %struct.sum_mgr**, %struct.sum_mgr*** %19, align 8
  %21 = load i64, i64* @SRCIMP, align 8
  %22 = getelementptr inbounds %struct.sum_mgr*, %struct.sum_mgr** %20, i64 %21
  %23 = load %struct.sum_mgr*, %struct.sum_mgr** %22, align 8
  %24 = bitcast %struct.sum_mgr* %23 to %struct.srcimp_mgr*
  store %struct.srcimp_mgr* %24, %struct.srcimp_mgr** %6, align 8
  %25 = load %struct.ct_atc*, %struct.ct_atc** %3, align 8
  %26 = getelementptr inbounds %struct.ct_atc, %struct.ct_atc* %25, i32 0, i32 0
  %27 = load %struct.sum_mgr**, %struct.sum_mgr*** %26, align 8
  %28 = load i64, i64* @AMIXER, align 8
  %29 = getelementptr inbounds %struct.sum_mgr*, %struct.sum_mgr** %27, i64 %28
  %30 = load %struct.sum_mgr*, %struct.sum_mgr** %29, align 8
  %31 = bitcast %struct.sum_mgr* %30 to %struct.amixer_mgr*
  store %struct.amixer_mgr* %31, %struct.amixer_mgr** %7, align 8
  %32 = load %struct.ct_atc*, %struct.ct_atc** %3, align 8
  %33 = getelementptr inbounds %struct.ct_atc, %struct.ct_atc* %32, i32 0, i32 0
  %34 = load %struct.sum_mgr**, %struct.sum_mgr*** %33, align 8
  %35 = load i64, i64* @SUM, align 8
  %36 = getelementptr inbounds %struct.sum_mgr*, %struct.sum_mgr** %34, i64 %35
  %37 = load %struct.sum_mgr*, %struct.sum_mgr** %36, align 8
  store %struct.sum_mgr* %37, %struct.sum_mgr** %8, align 8
  %38 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %39 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %38, i32 0, i32 8
  %40 = load %struct.srcimp.2**, %struct.srcimp.2*** %39, align 8
  %41 = icmp ne %struct.srcimp.2** %40, null
  br i1 %41, label %42, label %88

42:                                               ; preds = %2
  store i32 0, i32* %10, align 4
  br label %43

43:                                               ; preds = %78, %42
  %44 = load i32, i32* %10, align 4
  %45 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %46 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 8
  %48 = icmp slt i32 %44, %47
  br i1 %48, label %49, label %81

49:                                               ; preds = %43
  %50 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %51 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %50, i32 0, i32 8
  %52 = load %struct.srcimp.2**, %struct.srcimp.2*** %51, align 8
  %53 = load i32, i32* %10, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds %struct.srcimp.2*, %struct.srcimp.2** %52, i64 %54
  %56 = load %struct.srcimp.2*, %struct.srcimp.2** %55, align 8
  store %struct.srcimp.2* %56, %struct.srcimp.2** %9, align 8
  %57 = load %struct.srcimp.2*, %struct.srcimp.2** %9, align 8
  %58 = getelementptr inbounds %struct.srcimp.2, %struct.srcimp.2* %57, i32 0, i32 0
  %59 = load %struct.TYPE_2__*, %struct.TYPE_2__** %58, align 8
  %60 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %59, i32 0, i32 0
  %61 = load i32 (%struct.srcimp.2*)*, i32 (%struct.srcimp.2*)** %60, align 8
  %62 = load %struct.srcimp.2*, %struct.srcimp.2** %9, align 8
  %63 = call i32 %61(%struct.srcimp.2* %62)
  %64 = load %struct.srcimp_mgr*, %struct.srcimp_mgr** %6, align 8
  %65 = getelementptr inbounds %struct.srcimp_mgr, %struct.srcimp_mgr* %64, i32 0, i32 3
  %66 = load i32 (%struct.sum_mgr*, %struct.srcimp.5*)*, i32 (%struct.sum_mgr*, %struct.srcimp.5*)** %65, align 8
  %67 = load %struct.srcimp_mgr*, %struct.srcimp_mgr** %6, align 8
  %68 = bitcast %struct.srcimp_mgr* %67 to %struct.sum_mgr*
  %69 = load %struct.srcimp.2*, %struct.srcimp.2** %9, align 8
  %70 = bitcast %struct.srcimp.2* %69 to %struct.srcimp.5*
  %71 = call i32 %66(%struct.sum_mgr* %68, %struct.srcimp.5* %70)
  %72 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %73 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %72, i32 0, i32 8
  %74 = load %struct.srcimp.2**, %struct.srcimp.2*** %73, align 8
  %75 = load i32, i32* %10, align 4
  %76 = sext i32 %75 to i64
  %77 = getelementptr inbounds %struct.srcimp.2*, %struct.srcimp.2** %74, i64 %76
  store %struct.srcimp.2* null, %struct.srcimp.2** %77, align 8
  br label %78

78:                                               ; preds = %49
  %79 = load i32, i32* %10, align 4
  %80 = add nsw i32 %79, 1
  store i32 %80, i32* %10, align 4
  br label %43

81:                                               ; preds = %43
  %82 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %83 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %82, i32 0, i32 8
  %84 = load %struct.srcimp.2**, %struct.srcimp.2*** %83, align 8
  %85 = call i32 @kfree(%struct.srcimp.2** %84)
  %86 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %87 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %86, i32 0, i32 8
  store %struct.srcimp.2** null, %struct.srcimp.2*** %87, align 8
  br label %88

88:                                               ; preds = %81, %2
  %89 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %90 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %89, i32 0, i32 7
  %91 = load %struct.srcimp.2**, %struct.srcimp.2*** %90, align 8
  %92 = icmp ne %struct.srcimp.2** %91, null
  br i1 %92, label %93, label %130

93:                                               ; preds = %88
  store i32 0, i32* %10, align 4
  br label %94

94:                                               ; preds = %120, %93
  %95 = load i32, i32* %10, align 4
  %96 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %97 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %96, i32 0, i32 1
  %98 = load i32, i32* %97, align 4
  %99 = icmp slt i32 %95, %98
  br i1 %99, label %100, label %123

100:                                              ; preds = %94
  %101 = load %struct.src_mgr*, %struct.src_mgr** %5, align 8
  %102 = getelementptr inbounds %struct.src_mgr, %struct.src_mgr* %101, i32 0, i32 0
  %103 = load i32 (%struct.sum_mgr*, %struct.srcimp.2*)*, i32 (%struct.sum_mgr*, %struct.srcimp.2*)** %102, align 8
  %104 = load %struct.src_mgr*, %struct.src_mgr** %5, align 8
  %105 = bitcast %struct.src_mgr* %104 to %struct.sum_mgr*
  %106 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %107 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %106, i32 0, i32 7
  %108 = load %struct.srcimp.2**, %struct.srcimp.2*** %107, align 8
  %109 = load i32, i32* %10, align 4
  %110 = sext i32 %109 to i64
  %111 = getelementptr inbounds %struct.srcimp.2*, %struct.srcimp.2** %108, i64 %110
  %112 = load %struct.srcimp.2*, %struct.srcimp.2** %111, align 8
  %113 = call i32 %103(%struct.sum_mgr* %105, %struct.srcimp.2* %112)
  %114 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %115 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %114, i32 0, i32 7
  %116 = load %struct.srcimp.2**, %struct.srcimp.2*** %115, align 8
  %117 = load i32, i32* %10, align 4
  %118 = sext i32 %117 to i64
  %119 = getelementptr inbounds %struct.srcimp.2*, %struct.srcimp.2** %116, i64 %118
  store %struct.srcimp.2* null, %struct.srcimp.2** %119, align 8
  br label %120

120:                                              ; preds = %100
  %121 = load i32, i32* %10, align 4
  %122 = add nsw i32 %121, 1
  store i32 %122, i32* %10, align 4
  br label %94

123:                                              ; preds = %94
  %124 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %125 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %124, i32 0, i32 7
  %126 = load %struct.srcimp.2**, %struct.srcimp.2*** %125, align 8
  %127 = call i32 @kfree(%struct.srcimp.2** %126)
  %128 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %129 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %128, i32 0, i32 7
  store %struct.srcimp.2** null, %struct.srcimp.2*** %129, align 8
  br label %130

130:                                              ; preds = %123, %88
  %131 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %132 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %131, i32 0, i32 6
  %133 = load %struct.srcimp.2**, %struct.srcimp.2*** %132, align 8
  %134 = icmp ne %struct.srcimp.2** %133, null
  br i1 %134, label %135, label %172

135:                                              ; preds = %130
  store i32 0, i32* %10, align 4
  br label %136

136:                                              ; preds = %162, %135
  %137 = load i32, i32* %10, align 4
  %138 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %139 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %138, i32 0, i32 2
  %140 = load i32, i32* %139, align 8
  %141 = icmp slt i32 %137, %140
  br i1 %141, label %142, label %165

142:                                              ; preds = %136
  %143 = load %struct.amixer_mgr*, %struct.amixer_mgr** %7, align 8
  %144 = getelementptr inbounds %struct.amixer_mgr, %struct.amixer_mgr* %143, i32 0, i32 2
  %145 = load i32 (%struct.sum_mgr*, %struct.srcimp.2*)*, i32 (%struct.sum_mgr*, %struct.srcimp.2*)** %144, align 8
  %146 = load %struct.amixer_mgr*, %struct.amixer_mgr** %7, align 8
  %147 = bitcast %struct.amixer_mgr* %146 to %struct.sum_mgr*
  %148 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %149 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %148, i32 0, i32 6
  %150 = load %struct.srcimp.2**, %struct.srcimp.2*** %149, align 8
  %151 = load i32, i32* %10, align 4
  %152 = sext i32 %151 to i64
  %153 = getelementptr inbounds %struct.srcimp.2*, %struct.srcimp.2** %150, i64 %152
  %154 = load %struct.srcimp.2*, %struct.srcimp.2** %153, align 8
  %155 = call i32 %145(%struct.sum_mgr* %147, %struct.srcimp.2* %154)
  %156 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %157 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %156, i32 0, i32 6
  %158 = load %struct.srcimp.2**, %struct.srcimp.2*** %157, align 8
  %159 = load i32, i32* %10, align 4
  %160 = sext i32 %159 to i64
  %161 = getelementptr inbounds %struct.srcimp.2*, %struct.srcimp.2** %158, i64 %160
  store %struct.srcimp.2* null, %struct.srcimp.2** %161, align 8
  br label %162

162:                                              ; preds = %142
  %163 = load i32, i32* %10, align 4
  %164 = add nsw i32 %163, 1
  store i32 %164, i32* %10, align 4
  br label %136

165:                                              ; preds = %136
  %166 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %167 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %166, i32 0, i32 6
  %168 = load %struct.srcimp.2**, %struct.srcimp.2*** %167, align 8
  %169 = call i32 @kfree(%struct.srcimp.2** %168)
  %170 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %171 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %170, i32 0, i32 6
  store %struct.srcimp.2** null, %struct.srcimp.2*** %171, align 8
  br label %172

172:                                              ; preds = %165, %130
  %173 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %174 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %173, i32 0, i32 5
  %175 = load i32*, i32** %174, align 8
  %176 = icmp ne i32* %175, null
  br i1 %176, label %177, label %188

177:                                              ; preds = %172
  %178 = load %struct.sum_mgr*, %struct.sum_mgr** %8, align 8
  %179 = getelementptr inbounds %struct.sum_mgr, %struct.sum_mgr* %178, i32 0, i32 1
  %180 = load i32 (%struct.sum_mgr*, i32*)*, i32 (%struct.sum_mgr*, i32*)** %179, align 8
  %181 = load %struct.sum_mgr*, %struct.sum_mgr** %8, align 8
  %182 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %183 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %182, i32 0, i32 5
  %184 = load i32*, i32** %183, align 8
  %185 = call i32 %180(%struct.sum_mgr* %181, i32* %184)
  %186 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %187 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %186, i32 0, i32 5
  store i32* null, i32** %187, align 8
  br label %188

188:                                              ; preds = %177, %172
  %189 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %190 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %189, i32 0, i32 4
  %191 = load %struct.srcimp.2*, %struct.srcimp.2** %190, align 8
  %192 = icmp ne %struct.srcimp.2* %191, null
  br i1 %192, label %193, label %205

193:                                              ; preds = %188
  %194 = load %struct.src_mgr*, %struct.src_mgr** %5, align 8
  %195 = getelementptr inbounds %struct.src_mgr, %struct.src_mgr* %194, i32 0, i32 0
  %196 = load i32 (%struct.sum_mgr*, %struct.srcimp.2*)*, i32 (%struct.sum_mgr*, %struct.srcimp.2*)** %195, align 8
  %197 = load %struct.src_mgr*, %struct.src_mgr** %5, align 8
  %198 = bitcast %struct.src_mgr* %197 to %struct.sum_mgr*
  %199 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %200 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %199, i32 0, i32 4
  %201 = load %struct.srcimp.2*, %struct.srcimp.2** %200, align 8
  %202 = call i32 %196(%struct.sum_mgr* %198, %struct.srcimp.2* %201)
  %203 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %204 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %203, i32 0, i32 4
  store %struct.srcimp.2* null, %struct.srcimp.2** %204, align 8
  br label %205

205:                                              ; preds = %193, %188
  %206 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %207 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %206, i32 0, i32 3
  %208 = load i32*, i32** %207, align 8
  %209 = icmp ne i32* %208, null
  br i1 %209, label %210, label %216

210:                                              ; preds = %205
  %211 = load %struct.ct_atc*, %struct.ct_atc** %3, align 8
  %212 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %213 = call i32 @ct_unmap_audio_buffer(%struct.ct_atc* %211, %struct.ct_atc_pcm* %212)
  %214 = load %struct.ct_atc_pcm*, %struct.ct_atc_pcm** %4, align 8
  %215 = getelementptr inbounds %struct.ct_atc_pcm, %struct.ct_atc_pcm* %214, i32 0, i32 3
  store i32* null, i32** %215, align 8
  br label %216

216:                                              ; preds = %210, %205
  ret i32 0
}

declare dso_local i32 @kfree(%struct.srcimp.2**) #1

declare dso_local i32 @ct_unmap_audio_buffer(%struct.ct_atc*, %struct.ct_atc_pcm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
